--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,15 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 <link rel="stylesheet" href="style.css">
-<title>Notes Index</title>
+<title>Homepage</title>
 </head>
 <body>
-  <h1>index works</h1>
+  <div class="container">
+    <div class="jumbotron jumbotron-fluid text-center">
+      <h1>NoteTaker</h1>
+      <a href="/public/notes.html" class="btn btn-primary"><span class="far fa-sticky-note"> Your Notes</span></a>
+    </div>
+  </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
