--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="jumbotron jumbotron-fluid text-center">
       <h1>NoteTaker</h1>
-      <a href="/public/notes.html" class="btn btn-primary"><span class="far fa-sticky-note"> Your Notes</span></a>
+      <a href="/notes.html" class="btn btn-primary"><span class="far fa-sticky-note"> Your Notes</span></a>
     </div>
   </div>
 
