--- a/public/notes.html
+++ b/public/notes.html
@@ -1,38 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-<link rel="stylesheet" href="style.css">
-<title>Notes</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Notes</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="jumbotron jumbotron--home">
-          <h1 class="display-4">Your Notes</h1>
-          <p class="lead mt-4"><span id="num-newNotes">0</span> notes</p>
-          <a class="btn btn-lg mt-4 btn-primary" href="/" role="button">Create New Note</a>
+  <div class="container">
+    <div class="jumbotron jumbotron-fluid text-center"> Your Notes</span> </div>
+    <hr>
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <div class="card">
+          <div class="card-header">Notes List</div>
+          <div class="card-body">
+            <ul id="notes-list" class="list-group">
+
+              <!-- notes go here  -->
+
+            </ul>
+          </div>
         </div>
-        <div class="row mt-4">
-          <div class="col-md-12">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold">
-                  Notes
-                </h5>
-                <ul id="newNotes-list" class="list-group mt-4">
-    
-                </ul>
+
+      </div>
+      <div class="col-12 col-md-8">
+        <div class="card">
+          <div class="card-header"><span class="fas fa-pen"> Add a note</span> </div>
+          <div class="card-body">
+            <form role="form">
+              <div class="form-group">
+                <label for="note-title">Title of Note</label>
+                <input type="text" class="form-control" id="note-title">
               </div>
-            </div>
+              <div class="form-group">
+                <label for="note-body">Note Content</label>
+                <input type="text" class="form-control" id="note-body">
+              </div>
+              <button id="submit" type="submit" class="btn btn-primary btn-block">Submit</button>
+            </form>
           </div>
         </div>
       </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="assets/javascript/notes.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
