--- a/public/notes.html
+++ b/public/notes.html
@@ -7,13 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Caveat|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Notes</title>
 </head>
 
 <body>
   <div class="container">
-    <div class="jumbotron jumbotron-fluid text-center"> Your Notes</span> </div>
+    <div class="jumbotron jumbotron-fluid bg-primary text-light text-center"> <h1 class="jumboText">Your Notes</h1></span> </div>
     <hr>
     <div class="row">
       <div class="col-12 col-md-4">
@@ -31,15 +32,15 @@
       </div>
       <div class="col-12 col-md-8">
         <div class="card">
-          <div class="card-header"><span class="fas fa-pen"> Add a note</span> </div>
+          <div class="card-header"> Add a note</span> </div>
           <div class="card-body">
             <form role="form">
               <div class="form-group">
-                <label for="note-title">Title of Note</label>
+                <label for="note-title">Title</label>
                 <input type="text" class="form-control" id="note-title">
               </div>
               <div class="form-group">
-                <label for="note-body">Note Content</label>
+                <label for="note-body">Content</label>
                 <input type="text" class="form-control" id="note-body">
               </div>
               <button id="submit" type="submit" class="btn btn-primary btn-block">Submit</button>
@@ -49,6 +50,12 @@
       </div>
     </div>
   </div>
+
+  <footer class="sticky-bottom">
+      <div class="container-fluid">
+        Created by Rishabh Goel Copyright &copy; 2019
+      </div>
+    </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="assets/javascript/notes.js"></script>
