auto formatted all files that needed to be cleaned a bit

--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-<link href="https://fonts.googleapis.com/css?family=Caveat|Roboto" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Homepage</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Caveat|Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Homepage</title>
 </head>
+
 <body>
   <div class="container">
     <div class="jumbotron jumbotron-fluid bg-primary text-light text-center">
-      <h1 class= "jumboText">Your Very Own Notes Application</h1>
+      <h1 class="jumboText">Your Very Own Notes Application</h1>
       <hr>
       <h4 class="jumboText">Created by Rishabh Goel</h4>
-      
-      <!-- <a href="/notes.html" class="btn-lg btn-outline-primary"><span class="far fa-sticky-note"> Your Notes</span></a> -->
     </div>
-    <a href="/notes.html" class="btn-lg btn-outline-primary"><span class="far fa-sticky-note"> Click This Button For Your Notes</span></a>
+    <a href="/notes.html" class="btn-lg btn-outline-primary"><span class="far fa-sticky-note"> Click This Button For
+        Your Notes</span></a>
   </div>
 
   <footer class="sticky-bottom">
-      <div class="container-fluid">
-         Copyright &copy; 2019
-      </div>
-    </footer>
+    <div class="container-fluid">
+      Copyright &copy; 2019
+    </div>
+  </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
