--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container">
-    <div class="jumbotron jumbotron-fluid bg-primary text-light text-center">
+    <div class="jumbotron jumbotron-fluid bg-primary text-light text-center jumboShadow">
       <h1 class="jumboText">Your Very Own Notes Application</h1>
       <hr>
       <h4 class="jumboText">Created by Rishabh Goel</h4>
