--- a/public/notes.html
+++ b/public/notes.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container">
-    <div class="jumbotron jumbotron-fluid bg-primary text-light text-center"> <h1 class="jumboText">Your Notes</h1></span> </div>
+    <div class="jumbotron jumbotron-fluid bg-primary text-light text-center jumboShadow"> <h1 class="jumboText">Your Notes</h1></span> </div>
     <hr>
     <div class="row">
       <div class="col-12 col-md-4">
