changed jumbotron text

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="jumbotron jumbotron-fluid bg-primary text-light text-center jumboShadow">
-      <h1 class="jumboText">Your Very Own Notes Application</h1>
+      <h1 class="jumboText">Note Taker: A Clean Way To Stay Organized</h1>
       <hr>
       <h4 class="jumboText">Created by Rishabh Goel</h4>
     </div>
